# learn-agent

./: .gitignore  README.md  agent.py  pyproject.toml
config/: env_loader.py
examples/: agent.py  agent_functional.py  emailAgent.py  emailAgentInterruptDemo.py  evaluator_optimizer.py  graph_utils.py  langgraphAgent.py  llm_augmentation.py  orchestrator_worker.py  parallelization.py  prompt_chaining.py  routing.py  tool.py
examples/agents/: agent.py  agent_functional.py  langgraphAgent.py
examples/applications/: emailAgent.py
examples/persistence/: __init__.py  quickstart.py
examples/persistence/checkpointers/: checkpointer_serde.py  checkpoints.py  durability_modes.py  get_and_update_state.py  mysql_checkpointer.py
examples/persistence/stores/: basic.py  langgraph_store_config.json  listing.py  redis_semantic_search.py  semantic_search.py  using_in_langgraph.py
examples/workflows/: evaluator_optimizer.py  orchestrator_worker.py  parallelization.py  prompt_chaining.py  routing.py
models/: model_factory.py
tools/: math.py  weather.py
utils/: graph_utils.py
