[project]
name = "learn-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "langchain-deepseek>=1.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "models*", "tools*"]
